# gif-hpp

./: CMakeLists.txt  README.md  gif-h-demo.cpp  gif.hpp
